--- a/src/stories/stories.css
+++ b/src/stories/stories.css
@@ -105,8 +105,3 @@ pre {
 .max-750 {
   max-width: 750px;
 }
-
-.mpc-data-table {
-  border: 1px solid #ccc;
-  overflow: hidden;
-}
